# deal-action-copilot

./: .env.development  .env.example  .gitignore  README.md  langgraph.json  next.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
api/: index.py
api/_copilot/: config.py  data_access.py  graph.py  graph_studio.py  policies.py  rag.py  schemas.py  sessions.py  tools.py
api/_copilot/data/: opportunities.json
api/_copilot/data/knowledge/: case-study-financial-services.md  case-study-marketplace.md  device-risk.md  messaging-policy.md  playbook-gaming.md  playbook-healthcare.md  playbook-public-sector.md  predictive-docv.md  riskos-platform.md  sigma-identity-fraud.md  sigma-synthetic-fraud.md  socure-verify.md  workforce-verification.md
app/: globals.css  layout.tsx  page.tsx
tests/: test_policies.py  test_synthetic_deals_eval.py
