[project]
name = "deal-action-copilot"
version = "0.1.0"
description = "Policy-governed agentic RAG demo: next-best coordinated GTM action for an open opportunity"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "langgraph>=1.0.10",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-tavily>=0.2.17",
    "qdrant-client>=1.12.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.12",
]

[tool.uv]
package = false
